--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
             
         
         <div class="mt10 recent">
-            <h2>Recent articles</h2>        
+            <h2>Fresh articles</h2>        
              <ul>
                 {% for post in site.related_posts limit:5 %}
 
