--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 <article class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+     <img width="272" src="{{site.baseurl}}/images/black.png" alt="{{page.title}}">
   </header>
 
   <div class="post-content">
