--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,9 @@ layout: default
   <header class="post-header">
      <img width="272" src="{{site.baseurl}}/images/black.png" alt="{{page.title}}">
   </header>
-
+<ul class="nav">
+  <li><a class="brand-image" href="{{ HOME_PATH }}"><img class="brand-image" src="{{ASSET_PATH}}/black.png"/></a></li>
+  </ul>
   <div class="post-content">
     {{ content }}
   </div>
