--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,14 @@ html,body {
     border-bottom: 1px solid #eee;
 }
 
+.navbar .nav > li > a.brand-image {
+      padding: 4px 0px 0px 0px;
+}
+.navbar .nav > li > a > img.brand-image {
+    -webkit-border-radius: 0px;
+       -moz-border-radius: 0px;
+            border-radius: 0px;
+
 img {
     max-width: 100%;
 }
