--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,8 @@
 <header class="site-header">
+  
+  <ul class="nav">
+  <li><a class="brand-image" href="{{ HOME_PATH }}"><img class="brand-image" src="{{ASSET_PATH}}/black.png"/></a></li>
+  </ul>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
