--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,6 +21,7 @@ html,body {
     -webkit-border-radius: 0px;
        -moz-border-radius: 0px;
             border-radius: 0px;
+}
 
 img {
     max-width: 100%;
