--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,9 @@ layout: default
          </header>
 
           <div class="post-content" itemprop="articleBody">
+          
+              
+            {{ content }}
               
               /* Call Fontawesome in the head section or in the location where you place the share bar */
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -68,7 +71,7 @@ layout: default
 </style>
 
 <div class="share-box">
-<h5>Share this:</h5>
+<h5>Like what you see? Feel free to share it:</h5>
 
 <a class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-facebook-official fa"></i><span> facebook</span></a>
@@ -87,8 +90,6 @@ layout: default
 
 <a class="e" href="mailto:?subject={{ page.title }}&amp;body=Check out this site {{ site.url }}{{site.baseurl}}{{ page.url }}"><i class="fa fa-envelope fa"></i><span> email</span></a>                          
 </div>
-              
-            {{ content }}
           </div>
 
     </article>
