--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,6 @@ layout: default
               
             {{ content }}
               
-              /* Call Fontawesome in the head section or in the location where you place the share bar */
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <style>
 .share-box a {
@@ -71,7 +70,8 @@ layout: default
 </style>
 
 <div class="share-box">
-<h5>Like what you see? Feel free to share it:</h5>
+    <br/
+<h5>Do you like the article? Feel free to share it:</h5>
 
 <a class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-facebook-official fa"></i><span> facebook</span></a>
