--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -70,8 +70,7 @@ layout: default
 </style>
 
 <div class="share-box">
-    <br/
-<h5>Do you like the article? Feel free to share it:</h5>
+    <h5><strong>You LIKE the article? Feel free to SHARE it :)</strong></h5> <br />
 
 <a class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-facebook-official fa"></i><span> facebook</span></a>
