--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -70,7 +70,7 @@ layout: default
 </style>
 
 <div class="share-box">
-    <h5><strong>You LIKE the article? Feel free to SHARE it :) ↓↓↓</strong></h5> 
+    <h5><strong>You LIKE the article? Feel free to SHARE it :)</strong></h5> 
 
 <a class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-facebook-official fa"></i><span> facebook</span></a>
@@ -89,7 +89,7 @@ layout: default
 
 <a class="e" href="mailto:?subject={{ page.title }}&amp;body=Check out this site {{ site.url }}{{site.baseurl}}{{ page.url }}"><i class="fa fa-envelope fa"></i><span> email</span></a>                          
 </div>
-          </div>
+          </div><br />
 
     </article>
     <div class="row">
