--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,4 @@
 <header class="site-header">
-  
-  <ul class="nav">
-  <li><a class="brand-image" href="{{ HOME_PATH }}"><img class="brand-image" src="{{ASSET_PATH}}/black.png"/></a></li>
-  </ul>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -20,7 +16,7 @@
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
         <li><a href="{{site.baseurl}}/about/">My story</a></li>
-        <li><a href="{{site.baseurl}}/contact/">Hit me up</a></li>
+        <li><a href="{{site.baseurl}}/contact/">Text me</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
