--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{site.baseurl}}/">{{site.title}}</a>
+      <a class="navbar-brand" href="{{site.baseurl}}/">
+       <img src="{{site.baseurl}}/Viliam_black-r.png" alt="Viliam - change yourself, change the world" style="width:300px;height:101px;">
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
