--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{site.baseurl}}/">
-       <img src="{{site.baseurl}}/Viliam_black-r.png" alt="Viliam - change yourself, change the world" style="width:300px;height:101px;">
+       <img src="{{site.baseurl}}/images/Viliam_black-r.png" alt="Viliam - change yourself, change the world" style="width:300px;height:101px;">
       </a>
     </div>
 
