--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -50,7 +50,7 @@ img {
 .navbar-brand {
     font-weight: 900;
     font-size: 1.85em;
-    padding: 10px;
+    /*padding: 10px;*/
     @media screen and (max-width: $on-palm) {
         font-size: 1.5em;
     }
