--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,7 +10,7 @@ html,body {
 .navbar-default {
     border-color: transparent;
     background-color: transparent;
-    padding: 10px 0;
+    /*padding: 10px 0;*/
     border-bottom: 1px solid #eee;
 }
 
@@ -45,7 +45,7 @@ img {
 }
 
 .p20{
-    padding: 20px 0;
+   /* padding: 20px 0;*/
 }
 .navbar-brand {
     font-weight: 900;
