--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,14 +28,14 @@ img {
 }
 
 .mt50 {
-    margin-top: 50px;
+    /*margin-top: 50px;
 }
 .mt20 {
-    margin-top: 20px;
+   margin-top: 20px;
 }
 
 .mt10 {
-    margin-top: 10px;
+    margin-top: 10px;*/
 }
 .mt25 {
     margin-top: 0;
