--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: compress
   <body>
 
     {% include header.html %}
-
+    {% include general/og.html %}
     <div class="container">
       <div class="wrapper">
         {{ content }}
