--- a/_includes/og.html
+++ b/_includes/og.html
@@ -22,7 +22,7 @@
   <meta content="{{ site.url }}/about/" property="article:author">
 {% endif %}
 {% if page.featured-image %}
-  <meta content="{{ site.url }}/images/page.featured-image" property="og:image">
+  <meta content="{{ site.url }}/images/featured-image" property="og:image">
 {% else %}
   <meta content="{{ site.url }}images/webjeda-logo-big.jpg" property="og:image">
 {% endif %}
