--- a/_includes/og.html
+++ b/_includes/og.html
@@ -9,8 +9,8 @@
 {% else %}
   <meta content="website" property="og:type">
 {% endif %}
-{% if page.excerpt %}
-  <meta content="{{ page.excerpt }}" property="og:description">
+{% if page.description %}
+  <meta content="{{ page.description }}" property="og:description">
 {% else %}
   <meta content="{{ site.description }}" property="og:description">
 {% endif %}
@@ -21,10 +21,10 @@
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
   <meta content="{{ site.url }}/about/" property="article:author">
 {% endif %}
-{% if page.featured-image %}
-  <meta content="{{ site.url }}/images/post.featured-image" property="og:image">
+{% if page.image %}
+  <meta content="/img/srcset/{{ page.image }}" property="og:image">
 {% else %}
-  <meta content="{{ site.url }}images/webjeda-logo-big.jpg" property="og:image">
+  <meta content="/img/logo-high-resolution.png" property="og:image">
 {% endif %}
 {% if page.categories %}
   {% for category in page.categories limit:1 %}
