--- a/_includes/og.html
+++ b/_includes/og.html
@@ -22,9 +22,9 @@
   <meta content="{{ site.url }}/about/" property="article:author">
 {% endif %}
 {% if page.image %}
-  <meta content="/img/srcset/{{ page.image }}" property="og:image">
+  <meta content="/images/{{ page.image }}" property="og:image">
 {% else %}
-  <meta content="/img/logo-high-resolution.png" property="og:image">
+  <meta content="/images/logo-high-resolution.png" property="og:image">
 {% endif %}
 {% if page.categories %}
   {% for category in page.categories limit:1 %}
