--- a/_includes/og.html
+++ b/_includes/og.html
@@ -22,7 +22,7 @@
   <meta content="{{ site.url }}/about/" property="article:author">
 {% endif %}
 {% if page.image %}
-  <meta content="/images/{{ page.image }}" property="og:image">
+  <meta content="/images/{{ img }}" property="og:image">
 {% else %}
   <meta content="/images/logo-high-resolution.png" property="og:image">
 {% endif %}
